--- a/api/app/views/layouts/application.html.erb
+++ b/api/app/views/layouts/application.html.erb
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
-<html ng-app="AngularTasks">
+<html>
 <head>
   <title>Angular Tasks</title>
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<header>
-  Angular Tasks
-</header>
 
 <%= yield %>
 
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-resource.min.js"></script>
 <%= javascript_include_tag "application" %>
 </body>
 </html>
